--- a/composer.json
+++ b/composer.json
@@ -50,11 +50,10 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ],
-        "post-install-cmd": [
-         "php artisan clear-compiled",
-         "php artisan optimize",
-         "chmod -R 777 public/"
-        ]
+        "post-install-cmd": [ 
+            "php artisan clear-compiled", 
+            "php artisan optimize", 
+            "chmod -R 777 app/public/" ]
     },
     "config": {
         "preferred-install": "dist",
