delete optimized deprecated2

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         ],
         "post-install-cmd": [ 
             "php artisan clear-compiled",
-            "chmod -R 777 app/public/" ]
+            "chmod -R 777 public/" ]
     },
     "config": {
         "preferred-install": "dist",
